--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -126,6 +126,10 @@ h1 {
   font-size: 2rem;
   font-weight: bold;
 }
+h2 {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
 a, li {
   text-decoration: none;
   color: var(--primary)
