--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -121,6 +121,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 2rem; 
 }
 h1 {
   font-size: 2rem;
