Added product user view functionality in the user's page

--- a/src/style/vue-tags.css
+++ b/src/style/vue-tags.css
@@ -2,12 +2,12 @@
   margin: 0.6rem auto;
 }
 .vue-tags-input .ti-new-tag-input {
-  border: 1px solid red;
+  border: 1px solid var(--secondary);
   background: transparent;
 }
 .vue-tags-input .ti-input {
   border-radius: 9px;
-  border: 1px solid red !important;
+  border: 1px solid var(--secondary) !important;
   /* outline: auto; */
   border: none;
   padding: 4px 10px;
