--- a/src/style/vue-tags.css
+++ b/src/style/vue-tags.css
@@ -1,15 +1,15 @@
 .vue-tags-input {
-  margin: 0.6rem auto;
+  /* margin: 0.6rem auto; */
 }
 .vue-tags-input .ti-new-tag-input {
-  border: 1px solid var(--secondary);
-  background: transparent;
+  /* border: 1px solid var(--secondary); */
+  /* background: transparent; */
 }
 .vue-tags-input .ti-input {
-  border-radius: 9px;
+  /* border-radius: 9px;
   border: 1px solid var(--secondary) !important;
   /* outline: auto; */
-  border: none;
-  padding: 4px 10px;
-  transition: border-bottom 200ms ease;
+  /* border: none;
+  padding: 4px 10px; */
+  /*transition: border-bottom 200ms ease; */
 }
